Search engine changes to handle category/provider searches.