@@ -8,6 +8,7 @@ import com.venky.core.util.ObjectUtil;
 import com.venky.geo.GeoCoordinate;
 import com.venky.swf.db.Database;
 import com.venky.swf.db.model.Model;
+import com.venky.swf.db.model.reflection.ModelReflector;
 import com.venky.swf.plugins.collab.db.model.config.City;
 import com.venky.swf.plugins.collab.util.BoundingBox;
 import com.venky.swf.plugins.lucene.index.LuceneIndexer;
@@ -16,6 +17,7 @@ import com.venky.swf.sql.Conjunction;
 import com.venky.swf.sql.Expression;
 import com.venky.swf.sql.Operator;
 import com.venky.swf.sql.Select;
+import in.succinct.beckn.BecknAware;
 import in.succinct.beckn.BecknStrings;
 import in.succinct.beckn.Catalog;
 import in.succinct.beckn.Categories;
@@ -23,6 +25,7 @@ import in.succinct.beckn.Category;
 import in.succinct.beckn.Circle;
 import in.succinct.beckn.Context;
 import in.succinct.beckn.Descriptor;
+import in.succinct.beckn.Fulfillment;
 import in.succinct.beckn.Fulfillment.RetailFulfillmentType;
 import in.succinct.beckn.FulfillmentStop;
 import in.succinct.beckn.Fulfillments;
@@ -34,9 +37,9 @@ import in.succinct.beckn.Items;
 import in.succinct.beckn.Location;
 import in.succinct.beckn.Locations;
 import in.succinct.beckn.Message;
+import in.succinct.beckn.Payment;
 import in.succinct.beckn.Payments;
 import in.succinct.beckn.Provider;
-import in.succinct.beckn.Provider.Directories;
 import in.succinct.beckn.Providers;
 import in.succinct.beckn.Quantity;
 import in.succinct.beckn.Request;
@@ -45,18 +48,17 @@ import in.succinct.beckn.Subscriber;
 import in.succinct.beckn.TagGroup;
 import in.succinct.beckn.TagGroups;
 import in.succinct.beckn.Time;
-import in.succinct.catalog.indexer.db.model.Fulfillment;
 import in.succinct.catalog.indexer.db.model.IndexedProviderModel;
 import in.succinct.catalog.indexer.db.model.IndexedSubscriberModel;
-import in.succinct.catalog.indexer.db.model.Payment;
 import in.succinct.catalog.indexer.db.model.ProviderLocation;
-import in.succinct.json.JSONAwareWrapper;
+import in.succinct.catalog.indexer.db.model.ProviderTag;
 import org.apache.lucene.search.Query;
-import org.json.simple.JSONObject;
+import org.bouncycastle.util.Arrays;
+import org.json.simple.JSONArray;
+import org.json.simple.JSONAware;
 
 import java.util.ArrayList;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -101,43 +103,27 @@ public class CatalogSearchEngine {
         return q;
     }
 
-    public interface QueryExtractor<T extends Model & IndexedSubscriberModel> {
-        String extractQuery(T record);
-    }
-
-    public <T extends Model & IndexedSubscriberModel> String q(Class<T> clazz, QueryExtractor<T> extractor, String conditionColumnName, String conditionColumnValue,boolean exact) {
-        // Do Lucene
-        LuceneIndexer indexer = LuceneIndexer.instance(clazz);
-        Query query = indexer.constructQuery(q(conditionColumnName,conditionColumnValue,exact).toString());
-        List<Long> ids = indexer.findIds(query,0);
-
-
-        Select select = new Select().from(clazz);
-
-        select.where(new Expression(select.getPool(), Conjunction.AND).
-                add(new Expression(select.getPool(), "SUBSCRIBER_ID", Operator.IN, subscriberMap.keySet().toArray(new String[]{}))).
-                add(new Expression(select.getPool(), "ID", Operator.IN, ids.toArray())));
-
-        List<T> dbObjects = select.execute();
-
-        StringBuilder q = new StringBuilder();
-
-        if (!dbObjects.isEmpty()) {
-            q.append("(");
-            for (Iterator<T> i = dbObjects.iterator(); i.hasNext(); ) {
-                T dbObject = i.next();
-                q.append(extractor.extractQuery(dbObject));
-                if (i.hasNext()) {
-                    q.append(" OR ");
-                }
-            }
+    public <T extends Model & IndexedSubscriberModel> List<Long> ids(Class<T> modelClazz, String conditionColumnName, String conditionColumnValue, boolean exact, int maxRecords){
+        LuceneIndexer indexer = LuceneIndexer.instance(modelClazz);
+        StringBuilder q = q(conditionColumnName,conditionColumnValue,exact);
+        if (!q.isEmpty()){
+            q.insert(0,"(");
             q.append(")");
-        } else {
-            //q.append(String.format("( %s: NULL )", idColumnName)); // Query should fail.
-            q.append(extractor.extractQuery(null));
+            StringBuilder subscriberQ = new StringBuilder();
+            for (String subcriberId : subscriberMap.keySet()) {
+                subscriberQ.append(" ").append(subcriberId).append(" ");
+            }
+            if (!subscriberQ.isEmpty()){
+                q.append( " AND (").append(q("SUBSCRIBER_ID",subscriberQ.toString(),true)).append(" )");
+            }
+            q.insert(0,"(");
+            q.append(")");
+            Query query = indexer.constructQuery(q(conditionColumnName,conditionColumnValue,exact).toString());
+            return indexer.findIds(query,maxRecords);
         }
-        return q.toString();
+        return new ArrayList<>();
     }
+
     private String getDescription(Descriptor descriptor) {
         if (descriptor == null) {
             return "";
@@ -154,92 +140,148 @@ public class CatalogSearchEngine {
         }
         return name.trim();
     }
-
-    public String getProviderQuery(Request request, ObjectHolder<Conjunction> conjunction, ObjectHolder<Boolean> providerSpecific , ObjectHolder<String> environment,ObjectHolder<TagGroups> providerTags) {
+    public IntentMeta getProviderQuery(Request request,
+                                   ObjectHolder<Boolean> providerSpecific ,
+                                   ObjectHolder<String> environment,
+                                   ObjectHolder<TagGroups> providerTags,Conjunction conjunction) {
+        
+        IntentMeta intentMeta = new IntentMeta();
+        intentMeta.setConjunction(conjunction);
+        intentMeta.add(in.succinct.catalog.indexer.db.model.Provider.class,"ID","ID");
+        intentMeta.add(in.succinct.catalog.indexer.db.model.Provider.class,"NAME","OBJECT_NAME");
+        List<Class<? extends Model>> list = List.of(in.succinct.catalog.indexer.db.model.Item.class,in.succinct.catalog.indexer.db.model.Category.class, ProviderLocation.class, in.succinct.catalog.indexer.db.model.Fulfillment.class, in.succinct.catalog.indexer.db.model.Payment.class, ProviderTag.class);
+        
+        for (Class<? extends Model> clazz: list){
+            intentMeta.add(clazz,"ID","PROVIDER_ID");
+            intentMeta.add(clazz,"NAME","PROVIDER");
+        }
+        
+        
+        
         Intent intent = request.getMessage().getIntent();
         Descriptor intentDescriptor = intent == null ? null : intent.getDescriptor();
-        conjunction.set(Conjunction.OR);
-
+        
         Provider provider = intent == null ? null : intent.getProvider();
         Descriptor providerDescriptor = provider == null ? null : normalizeDescriptor(provider.getDescriptor());
 
         String env = provider == null? null : provider.getTag("network","environment");
         environment.set(env);
-        StringBuilder providerQ = new StringBuilder();
         TagGroups tags = provider == null ? null : provider.getTags();
         providerTags.set(tags);
 
-        if (provider != null && !ObjectUtil.isVoid(provider.getId())) {
-            provider.setId(provider.getId().trim());
-            providerQ.append(q(in.succinct.catalog.indexer.db.model.Provider.class, record -> {
-                if (record != null) {
+        if (conjunction == Conjunction.OR){
+            addDescriptorMeta(intentDescriptor,intentMeta);
+        }else {
+            if (provider != null && !ObjectUtil.isVoid(provider.getId())) {
+                provider.setId(provider.getId().trim());
+                List<Long> ids = ids(in.succinct.catalog.indexer.db.model.Provider.class,"OBJECT_ID",provider.getId(),true,1);
+                if (!ids.isEmpty()) {
                     providerSpecific.set(true);
-                    return String.format(" PROVIDER_ID:%d ", record.getId());
+                    intentMeta.add("ID", "%%s:%s".formatted(ids.get(0)));
                 }else {
-                    return " PROVIDER_ID:NULL ";
+                    intentMeta.add("ID", "%s:NULL");
                 }
-
-            }, "OBJECT_ID",provider.getId(),true));
-
-            conjunction.set(Conjunction.AND);
-        }else if (providerDescriptor != null || intentDescriptor != null) {
-            String desc = getDescription(providerDescriptor != null ? providerDescriptor : intentDescriptor);
-
-            providerQ.append(String.format(" ( %s ) ",
-                    q("PROVIDER", desc,false)));
-
-            if (providerDescriptor != null) {
-                conjunction.set(Conjunction.AND);
+            }else if (tags != null && !tags.isEmpty()){
+                Select select  = new Select().from(ProviderTag.class);
+                select.where(new Expression(select.getPool(),Conjunction.AND){{
+                    for (TagGroup tg :tags){
+                        add(new Expression(select.getPool(),"TAG_GROUP_CODE", Operator.EQ,tg.getId()));
+                        
+                        TagGroups list = tg.getList();
+                        if (list != null && !list.isEmpty()){
+                            add(new Expression(select.getPool(),Conjunction.OR){{
+                                for (TagGroup option : list){
+                                    add (new Expression(select.getPool(),Conjunction.AND){{
+                                        add(new Expression(select.getPool(),"TAG_CODE", Operator.EQ,option.getId()));
+                                        if (!ObjectUtil.isVoid(option.getValue())) {
+                                            add(new Expression(select.getPool(), "TAG_VALUE", Operator.EQ, option.getValue()));
+                                        }
+                                    }});
+                                }
+                            }});
+                        }
+                    }
+                }});
+                StringBuilder providers = new StringBuilder();
+                for (ProviderTag providerTag : select.execute(ProviderTag.class)) {
+                    providers.append(providerTag.getProviderId()).append(" ");
+                }
+                intentMeta.add("ID",q("%s", providers.toString(),true).toString());
             }
+            addDescriptorMeta(providerDescriptor,intentMeta);
         }
-
-        if (providerQ.length() > 0) {
-            providerQ.insert(0, "(");
-            providerQ.append(")");
+        return intentMeta;
+    }
+    public void addDescriptorMeta(Descriptor descriptor , IntentMeta intentMeta){
+        if (descriptor != null) {
+            String desc = getDescription(descriptor);
+            intentMeta.add("NAME", q("%s", desc,false).toString());
         }
-        return providerQ.toString();
     }
 
-    public String getCategoryQuery(Request request, ObjectHolder<Conjunction> conjunction) {
+    public IntentMeta getCategoryQuery(Request request, Conjunction conjunction) {
         Intent intent = request.getMessage().getIntent();
         Descriptor intentDescriptor = intent == null ? null : intent.getDescriptor();
-        conjunction.set(Conjunction.OR);
 
         Category category = intent == null ? null : intent.getCategory();
         Descriptor categoryDescriptor = category == null ? null : normalizeDescriptor(category.getDescriptor());
 
-        StringBuilder categoryQ = new StringBuilder();
-        if (category != null && !ObjectUtil.isVoid(category.getId())) {
-            category.setId(category.getId().trim());
-            categoryQ.append(String.format(" CATEGORY_IDS:%s",category.getId()));
-            conjunction.set(Conjunction.AND);
-        }else if (categoryDescriptor != null || intentDescriptor != null) {
-            String desc = getDescription(categoryDescriptor != null ? categoryDescriptor : intentDescriptor);
-            categoryQ.append(q(in.succinct.catalog.indexer.db.model.Category.class,record -> {
-                if (record != null) {
-                    return String.format(" CATEGORY_IDS:\"%s\" ", record.getObjectId());
-                }else {
-                    return " CATEGORY_IDS:NULL ";
-                }
-            }, "OBJECT_NAME",desc,false));
-            if (categoryDescriptor != null) {
-                conjunction.set(Conjunction.AND);
+        IntentMeta categoryQ = new IntentMeta();
+        categoryQ.setConjunction(conjunction);
+        categoryQ.add(in.succinct.catalog.indexer.db.model.Item.class,"ID","CATEGORY_IDS");
+        categoryQ.add(in.succinct.catalog.indexer.db.model.Item.class,"NAME","CATEGORY_IDS");
+        
+        categoryQ.add(in.succinct.catalog.indexer.db.model.Category.class,"ID","OBJECT_ID");
+        categoryQ.add(in.succinct.catalog.indexer.db.model.Category.class,"NAME","OBJECT_NAME");
+        
+        if (conjunction == Conjunction.OR){
+            addDescriptorMeta(intentDescriptor,categoryQ);
+        }else {
+            if (category != null && !ObjectUtil.isVoid(category.getId())) {
+                category.setId(category.getId().trim());
+                categoryQ.add("ID",String.format(" %%s:%s",category.getId()));
             }
+            addDescriptorMeta(categoryDescriptor,categoryQ);
         }
-        if (categoryQ.length() > 0) {
-            categoryQ.insert(0, "(");
-            categoryQ.append(")");
-        }
-        return categoryQ.toString();
+        
+        return categoryQ;
     }
-    public String getLocationQuery(Request request){
+    public IntentMeta getFulfillmentQuery(Request request){
+        IntentMeta fulfillmentQ = new IntentMeta();
+        fulfillmentQ.add(in.succinct.catalog.indexer.db.model.Fulfillment.class,"ID","OBJECT_ID");
+        fulfillmentQ.add(in.succinct.catalog.indexer.db.model.Item.class,"ID","FULFILLMENT_IDS");
+        
+        Intent intent = request.getMessage().getIntent();
+        if (intent.getFulfillment() != null && !ObjectUtil.isVoid(intent.getFulfillment().getType())){
+            fulfillmentQ.add("ID"," %%s:%s ".formatted(intent.getFulfillment().getType()));
+        }
+        return fulfillmentQ;
+    }
+    
+    @SuppressWarnings("MismatchedQueryAndUpdateOfCollection")
+    public IntentMeta getLocationQuery(Request request){
         Intent intent = request.getMessage().getIntent();
         Descriptor intentDescriptor = intent == null ? null : intent.getDescriptor();
 
         Location location = intent == null ? null : intent.getLocation();
         GeoCoordinate coordinate = location == null ? null : location.getGps();
 
-        StringBuilder locationQ = new StringBuilder();
+        IntentMeta locationQ = new IntentMeta();
+        
+        locationQ.add(in.succinct.catalog.indexer.db.model.ProviderLocation.class,"LOCATION_ID","OBJECT_ID");
+        
+        locationQ.add(in.succinct.catalog.indexer.db.model.Provider.class,"PROVIDER_ID","ID");
+        locationQ.add(in.succinct.catalog.indexer.db.model.Category.class,"PROVIDER_ID","PROVIDER_ID");
+        locationQ.add(in.succinct.catalog.indexer.db.model.Payment.class,"PROVIDER_ID","PROVIDER_ID");
+        locationQ.add(in.succinct.catalog.indexer.db.model.Fulfillment.class,"PROVIDER_ID","PROVIDER_ID");
+        
+        locationQ.add(in.succinct.catalog.indexer.db.model.Item.class,"PROVIDER_ID","PROVIDER_ID");
+        locationQ.add(in.succinct.catalog.indexer.db.model.Item.class,"LOCATION_ID","LOCATION_IDS");
+        
+        
+        Set<Long> providerIds = new HashSet<>();
+        
+        
         if (coordinate != null){
             Select home_delivery_select = new Select().from(ProviderLocation.class);
 
@@ -253,183 +295,252 @@ public class CatalogSearchEngine {
             Set<String> locationIds = new HashSet<>();
             for (ProviderLocation providerLocation : providerLocations) {
                 locationIds.add(providerLocation.getObjectId());
+                providerIds.add(providerLocation.getProviderId());
             }
 
             BoundingBox bb  = new BoundingBox(coordinate,1,10); //Hardcoded buyer geo fence 10 kms
             List<ProviderLocation> buyerGeoFenceBasedList = bb.find(ProviderLocation.class,0);
 
-            Map<Long,Set<String>> providerIdLocationMap = new UnboundedCache<Long, Set<String>>() {
+            Map<Long,Set<String>> closeByProviderLocationMap = new UnboundedCache<>() {
                 @Override
                 protected Set<String> getValue(Long key) {
                     return new HashSet<>();
                 }
             };
             for (ProviderLocation providerLocation : buyerGeoFenceBasedList) {
-                providerIdLocationMap.get(providerLocation.getProviderId()).add(providerLocation.getObjectId());
+                closeByProviderLocationMap.get(providerLocation.getProviderId()).add(providerLocation.getObjectId());
             }
 
-            if (!providerIdLocationMap.isEmpty()) {
-                Select providerSupportingStorePickup = new Select().from(Fulfillment.class);
+            if (!closeByProviderLocationMap.isEmpty()) {
+                Select providerSupportingStorePickup = new Select().from(in.succinct.catalog.indexer.db.model.Fulfillment.class);
                 providerSupportingStorePickup.where(new Expression(providerSupportingStorePickup.getPool(),Conjunction.AND).
                         add(new Expression(providerSupportingStorePickup.getPool(), "OBJECT_ID", Operator.EQ, RetailFulfillmentType.store_pickup.toString())).
-                        add(new Expression(providerSupportingStorePickup.getPool(), "PROVIDER_ID", Operator.IN, providerIdLocationMap.keySet().toArray())));
+                        add(new Expression(providerSupportingStorePickup.getPool(), "PROVIDER_ID", Operator.IN, closeByProviderLocationMap.keySet().toArray())));
 
-                Set<Long> providerIds = new HashSet<>();
-                for (Fulfillment f : providerSupportingStorePickup.execute(Fulfillment.class)){
+                Set<Long> storePickupSupportingProviderIds = new HashSet<>();
+                for (in.succinct.catalog.indexer.db.model.Fulfillment f : providerSupportingStorePickup.execute(in.succinct.catalog.indexer.db.model.Fulfillment.class)){
+                    storePickupSupportingProviderIds.add(f.getProviderId());
                     providerIds.add(f.getProviderId());
                 }
-                for (Map.Entry<Long,Set<String>> e : providerIdLocationMap.entrySet()){
-                    if (providerIds.contains(e.getKey())){
+                for (Map.Entry<Long,Set<String>> e : closeByProviderLocationMap.entrySet()){
+                    if (storePickupSupportingProviderIds.contains(e.getKey())){
                         locationIds.addAll(e.getValue());
                     }
                 }
             }
 
             if (!locationIds.isEmpty()) {
-                locationQ.append("(");
-                for (String lId : locationIds) {
-                    if (locationQ.length() > 1) {
-                        locationQ.append(" OR ");
-                    }
-                    locationQ.append(String.format("LOCATION_IDS:\"%s\"", lId));
-                }
-                locationQ.append(")");
+                StringBuilder ids = new StringBuilder();
+                locationIds.forEach(id-> ids.append(" ").append(id).append(" "));
+                locationQ.add("LOCATION_ID",q("%s", ids.toString(),true).toString());
             }else {
-                locationQ.append("LOCATION_IDS:NULL");
+                locationQ.add("LOCATION_ID","%s:NULL");
+            }
+            if (!providerIds.isEmpty()){
+                StringBuilder ids = new StringBuilder();
+                providerIds.forEach(id-> ids.append(" ").append(id).append(" "));
+                locationQ.add("PROVIDER_ID",q("%s", ids.toString(),true).toString());
+            }else {
+                locationQ.add("PROVIDER_ID","%s:NULL");
             }
         }
-        return locationQ.toString();
+        return locationQ;
     }
 
-    public String getItemQuery(Request request, ObjectHolder<Conjunction> conjunction) {
+    public IntentMeta getItemQuery(Request request , Conjunction conjunction) {
+        IntentMeta intentMeta = new IntentMeta();
+        intentMeta.setConjunction(conjunction);
+        
+        intentMeta.add( in.succinct.catalog.indexer.db.model.Item.class,"ID","OBJECT_ID");
+        intentMeta.add(in.succinct.catalog.indexer.db.model.Item.class,"NAME","OBJECT_NAME");
+        
         Intent intent = request.getMessage().getIntent();
         Descriptor intentDescriptor = intent == null ? null : intent.getDescriptor();
-        conjunction.set(Conjunction.OR);
 
         Item item = intent == null ? null : intent.getItem();
         Descriptor itemDescriptor = item == null ? null : normalizeDescriptor(item.getDescriptor());
-
-        StringBuilder itemQ = new StringBuilder();
-        if (item != null && !ObjectUtil.isVoid(item.getId())) {
-            item.setId(item.getId().trim());
-            itemQ.append(q("OBJECT_ID", item.getId(),true));
-            conjunction.set(Conjunction.AND);
-        }else if (itemDescriptor != null || intentDescriptor != null) {
-            String desc = getDescription(itemDescriptor != null ? itemDescriptor : intentDescriptor);
-            itemQ.append(q("OBJECT_NAME", desc,false));
-            if (itemDescriptor != null) {
-                conjunction.set(Conjunction.AND);
+        
+        if (conjunction == Conjunction.OR){
+            addDescriptorMeta(intentDescriptor,intentMeta);
+        }else {
+            if (item != null && !ObjectUtil.isVoid(item.getId())) {
+                item.setId(item.getId().trim());
+                intentMeta.add("ID", "%%s:%s".formatted(item.getId()));
             }
+            addDescriptorMeta(itemDescriptor,intentMeta);
         }
 
-        if (itemQ.length() > 0) {
-            itemQ.insert(0, "(");
-            itemQ.append(")");
-        }
-        return itemQ.toString();
+
+        return intentMeta;
     }
 
-    static class IntentQuery {
-        IntentQuery(String query , Conjunction conjunction) {
-            this.query = query;
-            this.present = !ObjectUtil.isVoid(query);
+    
+    public static class IntentMeta {
+        public IntentMeta(){
+        }
+        Conjunction conjunction = Conjunction.AND ;
+        
+        public void setConjunction(Conjunction conjunction) {
             this.conjunction = conjunction;
         }
-        String query ;
-        boolean present;
-        Conjunction conjunction;
-    }
-    public List<in.succinct.catalog.indexer.db.model.Item> getItems(Request request, ObjectHolder<Boolean> providerSpecific, ObjectHolder<String> environment, ObjectHolder<TagGroups> providerTags){
-
-        ObjectHolder<Conjunction> providerConjunction = new ObjectHolder<>(null);
-        ObjectHolder<Conjunction> categoryConjunction = new ObjectHolder<>(null);
-        ObjectHolder<Conjunction> itemConjunction = new ObjectHolder<>(null);
         
-        List<IntentQuery> list = new ArrayList<>();
-        
-        IntentQuery providerQuery = new IntentQuery(getProviderQuery(request, providerConjunction,providerSpecific,environment,providerTags),providerConjunction.get());
-        IntentQuery categoryQuery = new IntentQuery(getCategoryQuery(request, categoryConjunction),categoryConjunction.get());
-        IntentQuery itemQuery = new IntentQuery(getItemQuery(request,itemConjunction),itemConjunction.get());
-        IntentQuery locationQuery = new IntentQuery(providerSpecific.get() ? ""  : getLocationQuery(request),Conjunction.AND);
-        Map<Conjunction,List<IntentQuery>> queries = new UnboundedCache<>() {
+        Map<String,String> queryMeta = new Cache<>() {
             @Override
-            protected List<IntentQuery> getValue(Conjunction key) {
+            protected String getValue(String s) {
+                return null;
+            }
+        };
+        Map<Class<? extends Model>,Map<String,String>> meta = new Cache<>() {
+            @Override
+            protected Map<String, String> getValue(Class<? extends Model> aClass) {
+                return new Cache<>() {
+                    @Override
+                    protected String getValue(String s) {
+                        return null;
+                    }
+                };
+            }
+        };
+        public <T extends Model> void add(Class<T> modelClass, String fieldMeta, String field){
+            meta.get(modelClass).put(fieldMeta,field);
+        }
+        public void add(String metaFieldName, String query){
+            if (!ObjectUtil.isVoid(query)) {
+                queryMeta.put(metaFieldName, query);
+            }
+        }
+        public boolean isPresent(){
+            return !queryMeta.isEmpty();
+        }
+        
+        public String q(Class<? extends Model> clazz){
+            Map<String,String> fieldMap = meta.get(clazz);
+            
+            StringBuilder q = new StringBuilder();
+            queryMeta.forEach((metaFieldName,fq)->{
+                if (fieldMap.containsKey(metaFieldName)) {
+                    int count = fq.split("%s").length;
+                    Object[] fieldNames = new Object[count];
+                    Arrays.fill(fieldNames, fieldMap.get(metaFieldName));
+                    if (!q.isEmpty()) {
+                        q.append(" ").append(conjunction).append(" ");
+                    }
+                    q.append(fq.formatted(fieldNames));
+                }
+            });
+            if (!q.isEmpty()) {
+                q.insert(0, "(");
+                q.append(")");
+            }
+            
+            return q.toString();
+        }
+    
+    }
+    public <M extends Model & IndexedSubscriberModel> List<M> getRecords(Class<M> clazz, Request request,
+                            ObjectHolder<String> environment, int numRecords,IntentMeta... intentQueries){
+        
+        Map<Conjunction,List<IntentMeta>> queries = new UnboundedCache<>() {
+            @Override
+            protected List<IntentMeta> getValue(Conjunction key) {
                 return new ArrayList<>();
             }
         };
         
         
-        for (IntentQuery q : new IntentQuery[]{providerQuery,locationQuery,categoryQuery,itemQuery}) {
-            if (q.present ) {
+        for (IntentMeta q : intentQueries) {
+            if (q.isPresent()) {
                 queries.get(q.conjunction).add(q);
             }
         }
-        StringBuilder q = new StringBuilder();
-        for (IntentQuery intentQuery : queries.get(Conjunction.AND)) {
-            if (q.length() > 0){
-                q.append(" AND ");
+        StringBuilder andQ = new StringBuilder();
+        for (IntentMeta intentQuery : queries.get(Conjunction.AND)) {
+            if (!andQ.isEmpty()){
+                andQ.append(" AND ");
             }
-            q.append(intentQuery.query);
+            andQ.append(intentQuery.q(clazz));
         }
-        StringBuilder orQ = new StringBuilder();
-        for (IntentQuery intentQuery : queries.get(Conjunction.OR)) {
-            if (orQ.length() > 0){
-                orQ.append(" OR ");
-            }
-            orQ.append(intentQuery.query);
+        if (!andQ.isEmpty()){
+            andQ.insert(0,"(");
+            andQ.append(")");
         }
         
-        if (q.length() > 0){
-            if (orQ.length() > 0) {
-                q.append(" AND (");
-                q.append(orQ);
-                q.append(")");
+        StringBuilder orQ = new StringBuilder();
+        for (IntentMeta intentQuery : queries.get(Conjunction.OR)) {
+            if (!orQ.isEmpty()){
+                orQ.append(" OR ");
             }
-        }else {
+            orQ.append(intentQuery.q(clazz));
+        }
+        if (!orQ.isEmpty()){
+            orQ.insert(0,"(");
+            orQ.append(")");
+        }
+        
+        StringBuilder q = new StringBuilder();
+        if (!andQ.isEmpty()){
+            q.append(andQ);
+        }
+        if (!orQ.isEmpty()){
+            if (!q.isEmpty()) {
+                q.append(" AND ");
+            }
             q.append(orQ);
         }
-        if (q.length() > 0 ){
-            q.insert(0,"(");
+        if (!q.isEmpty()) {
+            q.insert(0, "(");
             q.append(")");
         }
         
-        List<Long> itemIds = new ArrayList<>();
+        
+        List<Long> ids = new ArrayList<>();
         if (!ObjectUtil.isVoid(q.toString())) {
-            LuceneIndexer indexer = LuceneIndexer.instance(in.succinct.catalog.indexer.db.model.Item.class);
+            LuceneIndexer indexer = LuceneIndexer.instance(clazz);
             Query query = indexer.constructQuery(q.toString());
-            Config.instance().getLogger(getClass().getName()).info("Searching for /items/search/" + q);
-            itemIds = indexer.findIds(query, 0);
-            Config.instance().getLogger(getClass().getName()).info("SearchAdaptor: Query result size: " + itemIds.size());
-            if (itemIds.isEmpty()) {
-                return new ArrayList<>();
+            Config.instance().getLogger(getClass().getName()).info("Searching for /%s/search/".formatted(StringUtil.underscorize(clazz.getSimpleName()).toLowerCase() )+ q);
+            ids = indexer.findIds(query, 0);
+            Config.instance().getLogger(getClass().getName()).info("SearchAdaptor: Query result size: " + ids.size());
+        }
+        if (ids.isEmpty()) {
+            return new ArrayList<>();
+        }
+        Select sel = new Select().from(clazz);
+        
+        Expression where = new Expression(sel.getPool(), Conjunction.AND);
+        where.add(new Expression(sel.getPool(), "SUBSCRIBER_ID", Operator.IN, subscriberMap.keySet().toArray(new String[]{})));
+        where.add(Expression.createExpression(sel.getPool(), "ID", Operator.IN, ids.toArray()));
+        sel.where(where);
+        
+        StringBuilder extra = new StringBuilder();
+        ModelReflector<M> ref = ModelReflector.instance(clazz);
+        String tableName = ref.getTableName();
+        if (ref.getRealFields().contains("PROVIDER_ID")) {
+            extra.append(" and not exists (select 1 from provider_tags where provider_id = %s.provider_id and tag_group_code = 'network' and tag_code = 'suspended' and tag_value = 'Y' )".formatted(tableName));
+            extra.append(" and not exists (select 1 from provider_tags where provider_id = %s.provider_id and tag_group_code = 'kyc' and tag_code = 'ok' and tag_value = 'N' )".formatted(tableName));
+            if (environment.get() != null) {
+                extra.append(String.format(" and exists (select 1 from provider_tags where provider_id = %s.provider_id and tag_group_code = 'network' and tag_code = 'environment' and tag_value = '%s' )",
+                        tableName,
+                        environment.get()));
             }
         }
         
-        
-        
-        Select sel = new Select().from(in.succinct.catalog.indexer.db.model.Item.class);
-        Expression where = new Expression(sel.getPool(), Conjunction.AND);
-        //where.add(new Expression(sel.getPool(), "ACTIVE", Operator.EQ, true));
-        where.add(new Expression(sel.getPool(), "SUBSCRIBER_ID", Operator.IN, subscriberMap.keySet().toArray(new String[]{})));
-        
-        if (!itemIds.isEmpty()) {
-            where.add(Expression.createExpression(sel.getPool(), "ID", Operator.IN, itemIds.toArray()));
-        }
-        
-        
-        sel.where(where);
-        StringBuilder extra = new StringBuilder();
-        extra.append(" and not exists (select 1 from provider_tags where provider_id = items.provider_id and tag_group_code = 'network' and tag_code = 'suspended' and tag_value = 'Y' )");
-        extra.append(" and not exists (select 1 from provider_tags where provider_id = items.provider_id and tag_group_code = 'kyc' and tag_code = 'ok' and tag_value = 'N' )");
-        if (environment.get() != null) {
-            extra.append(String.format(" and exists (select 1 from provider_tags where provider_id = items.provider_id and tag_group_code = 'network' and tag_code = 'environment' and tag_value = '%s' )",
-                    environment.get()));
-        }
         sel.add(extra.toString());
         
-        return sel.where(where).execute(in.succinct.catalog.indexer.db.model.Item.class, subscriberMap.size() == 1 ? Select.MAX_RECORDS_ALL_RECORDS : 100);
+        return sel.where(where).execute(clazz, numRecords);
     }
-    @SuppressWarnings("MismatchedQueryAndUpdateOfCollection")
+    
+    private <T extends JSONAware,B extends BecknAware<T>> B toBeckn(Class<B> clazz, IndexedSubscriberModel model){
+        try {
+            return clazz.getConstructor(String.class).newInstance(model.getObjectJson());
+        }catch (Exception ex){
+            throw new RuntimeException(ex);
+        }
+    }
+    
+    
+    
+    
+    @SuppressWarnings({"MismatchedQueryAndUpdateOfCollection", "unchecked"})
     private void indexed_search(Request request, List<Request> replies) {
 
         Map<String, Request> subscriberReplies = new Cache<>(0, 0) {
@@ -472,21 +583,49 @@ public class CatalogSearchEngine {
         if (intent.getDescriptor() != null){
             intent.setDescriptor(normalizeDescriptor(intent.getDescriptor()));
         }
-        ObjectHolder<Boolean> providerSpecific = new ObjectHolder<>(false);
+        
+        
+        ObjectHolder<Boolean> providerSpecific = new ObjectHolder<>(false);// Whether to return all items or not.
         ObjectHolder<String> environment = new ObjectHolder<>(null);
         ObjectHolder<TagGroups> providerTags = new ObjectHolder<>(null);
         
+        IntentMeta providerQuery = getProviderQuery(request, providerSpecific,environment,providerTags,Conjunction.AND);
+        IntentMeta softProviderQuery = getProviderQuery(request, providerSpecific,environment,providerTags,Conjunction.OR);
         
-        //request.getContext().
-        List<in.succinct.catalog.indexer.db.model.Item> records = getItems(request,providerSpecific,environment,providerTags);
-        if (records.isEmpty()) {
-            replies.addAll(subscriberReplies.values()); //Send empty responses.
-            return;
-        }
+        IntentMeta locationQuery = providerSpecific.get() ? providerQuery  : getLocationQuery(request);
+        
+        IntentMeta categoryQuery = getCategoryQuery(request,Conjunction.AND);
+        IntentMeta softCategoryQuery = getCategoryQuery(request,Conjunction.OR);
+        
+        IntentMeta itemQuery = getItemQuery(request,Conjunction.AND);
+        IntentMeta softItemQuery = getItemQuery(request,Conjunction.OR);
+        IntentMeta fulfillmentQuery = getFulfillmentQuery(request);
 
-
-        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Item>>>  appItemMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Item.class, new HashSet<>());
-        loadCache(records,appItemMap);
+        List<in.succinct.catalog.indexer.db.model.ProviderLocation> providerLocationRecords = getRecords(in.succinct.catalog.indexer.db.model.ProviderLocation.class,request,environment,0,
+                locationQuery);
+        List<in.succinct.catalog.indexer.db.model.Provider> providerRecords = getRecords(in.succinct.catalog.indexer.db.model.Provider.class,request,environment,0,
+                locationQuery,
+                providerQuery);
+        List<in.succinct.catalog.indexer.db.model.Fulfillment> fulfillmentRecords = getRecords(in.succinct.catalog.indexer.db.model.Fulfillment.class,request,environment,0,
+                providerQuery,
+                locationQuery,
+                fulfillmentQuery);
+        List<in.succinct.catalog.indexer.db.model.Payment> paymentRecords = getRecords(in.succinct.catalog.indexer.db.model.Payment.class,request,environment,0,
+                providerQuery,
+                locationQuery);
+        List<in.succinct.catalog.indexer.db.model.Category> categoryRecords = getRecords(in.succinct.catalog.indexer.db.model.Category.class,request,environment,0,
+                providerQuery,
+                locationQuery,
+                categoryQuery);
+        List<in.succinct.catalog.indexer.db.model.Item> itemRecords =  ((providerSpecific.get() && !providerRecords.isEmpty()) || itemQuery.isPresent() || categoryQuery.isPresent() || softItemQuery.isPresent() ) ? getRecords(in.succinct.catalog.indexer.db.model.Item.class,request,environment,providerSpecific.get() && !providerRecords.isEmpty() ? 0 : 50,
+                providerQuery,softProviderQuery,
+                locationQuery,
+                categoryQuery,softCategoryQuery,
+                fulfillmentQuery,
+                itemQuery,softItemQuery) : new ArrayList<>();
+        // Dont get items for market places.
+        
+        
         
         Cache<String, Cache<Long,in.succinct.catalog.indexer.db.model.Provider>> appProviderMap = new Cache<>(0,0) {
             @Override
@@ -499,38 +638,41 @@ public class CatalogSearchEngine {
                 };
             }
         };
+        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.ProviderLocation>>>  appLocationMap = createAppDbCache(in.succinct.catalog.indexer.db.model.ProviderLocation.class, new HashSet<>());
+        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Category>>>  appCategoryMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Category.class, new HashSet<>());
+        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Item>>>  appItemMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Item.class, new HashSet<>());
+        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Fulfillment>>>  appFulfillmentMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Fulfillment.class, new HashSet<>());
+        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Payment>>>  appPaymentMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Payment.class, new HashSet<>());
         
+        Set<String> allSubscriberIds = new HashSet<>(subscriberMap.keySet());
+        if (!providerLocationRecords.isEmpty()){
+            loadCache(providerLocationRecords,appLocationMap);
+            allSubscriberIds.retainAll(appLocationMap.keySet());
+        }
+        if (!providerRecords.isEmpty()){
+            for (in.succinct.catalog.indexer.db.model.Provider providerRecord : providerRecords) {
+                appProviderMap.get(providerRecord.getSubscriberId()).put(providerRecord.getId(),providerRecord);
+            }
+            allSubscriberIds.retainAll(appProviderMap.keySet());
+        }
+        if (!categoryRecords.isEmpty()){
+            loadCache(categoryRecords,appCategoryMap);
+            allSubscriberIds.retainAll(appCategoryMap.keySet());
+        }
+        if (!itemRecords.isEmpty()){
+            loadCache(itemRecords,appItemMap);
+            allSubscriberIds.retainAll(appItemMap.keySet());
+        }
+        if (!fulfillmentRecords.isEmpty()){
+            loadCache(fulfillmentRecords,appFulfillmentMap);
+            allSubscriberIds.retainAll(appFulfillmentMap.keySet());
+        }
+        if (!paymentRecords.isEmpty()){
+            loadCache(paymentRecords,appPaymentMap);
+            allSubscriberIds.retainAll(appPaymentMap.keySet());
+        }
 
         
-        Set<String> allSubscriberIds = new HashSet<>();
-        Set<String> allProviderLocationIds = new HashSet<>();
-        Set<String> allFulfillmentIds = new HashSet<>();
-        Set<String> allCategoryIds = new HashSet<>();
-        Set<String> allPaymentIds = new HashSet<>();
-        
-        appItemMap.forEach((s,c)->{
-            allSubscriberIds.add(s);
-
-            Select providerSelect = new Select().from(in.succinct.catalog.indexer.db.model.Provider.class);
-            providerSelect.where(new Expression(providerSelect.getPool(),"ID",Operator.IN, c.keySet().toArray())).execute(in.succinct.catalog.indexer.db.model.Provider.class).
-                    forEach(p->appProviderMap.get(p.getSubscriberId()).put(p.getId(),p));
-            
-            c.forEach((providerId,itemCache) ->{
-                itemCache.forEach((itemObjectId,item)->{
-                    allProviderLocationIds.addAll(BecknStrings.parse(item.getLocationIds()));
-                    allCategoryIds.addAll(BecknStrings.parse(item.getCategoryIds()));
-                    allPaymentIds.addAll(BecknStrings.parse(item.getPaymentIds()));
-                });
-            });
-        });
-        
-        
-        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.ProviderLocation>>>  appLocationMap = createAppDbCache(in.succinct.catalog.indexer.db.model.ProviderLocation.class, allProviderLocationIds);
-        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Fulfillment>>>  appFulfillmentMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Fulfillment.class, allFulfillmentIds);
-        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Category>>>  appCategoryMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Category.class, allCategoryIds);
-        Cache<String, Cache<Long,Cache<String, in.succinct.catalog.indexer.db.model.Payment>>>  appPaymentMap = createAppDbCache(in.succinct.catalog.indexer.db.model.Payment.class, allPaymentIds);
-        
-
         for (String subscriberId : allSubscriberIds) {
             Request reply = subscriberReplies.get(subscriberId);
             Context context = reply.getContext();
@@ -564,86 +706,71 @@ public class CatalogSearchEngine {
                 time.setTimestamp(reply.getContext().getTimestamp());
                 outProvider.setTime(time);
                 providers.add(outProvider);
+                Categories categories = outProvider.getCategories(true);
+                Locations locations = outProvider.getLocations(true);
+                Fulfillments fulfillments =outProvider.getFulfillments(true);
+                Payments payments = outProvider.getPayments(true);
+                Items items = outProvider.getItems(true);
+                
+                Cache<String, in.succinct.catalog.indexer.db.model.ProviderLocation> providerLocationMap = appLocationMap.get(subscriberId).get(pid);
+                providerLocationMap.forEach((providerLocationId,dbProviderLocation)->{
+                    if (locations.get(providerLocationId) == null){
+                        locations.add(toBeckn(Location.class,dbProviderLocation));
+                    }
+                });
+                Cache<String, in.succinct.catalog.indexer.db.model.Category> categoryMap = appCategoryMap.get(subscriberId).get(pid);
+                categoryMap.forEach((becknCategoryId,dbCategory)->{
+                    if (categories.get(becknCategoryId) == null){
+                        categories.add(toBeckn(Category.class,dbCategory));
+                    }
+                });
+                Cache<String, in.succinct.catalog.indexer.db.model.Fulfillment> fulfillmentCache = appFulfillmentMap.get(subscriberId).get(pid);
+                fulfillmentCache.forEach((becknFulfillmentId,dbFulfillment)->{
+                    if (fulfillments.get(becknFulfillmentId) == null){
+                        fulfillments.add(toBeckn(Fulfillment.class,dbFulfillment));
+                    }
+                });
+                
+                Cache<String, in.succinct.catalog.indexer.db.model.Payment> paymentCache = appPaymentMap.get(subscriberId).get(pid);
+                paymentCache.forEach((becknPaymentId,dbPayment)->{
+                    if (payments.get(becknPaymentId) == null){
+                        payments.add(toBeckn(Payment.class,dbPayment));
+                    }
+                });
+                
 
                 Cache<String, in.succinct.catalog.indexer.db.model.Item> itemMap = appItemMap.get(subscriberId).get(pid);
                 for (String becknItemId : itemMap.keySet()) {
                     Config.instance().getLogger(getClass().getName()).info("SearchAdaptor: Looping through result items" + becknItemId);
                     in.succinct.catalog.indexer.db.model.Item dbItem = itemMap.get(becknItemId);
                     
-                    BecknStrings categoryIds = new BecknStrings(dbItem.getCategoryIds());
-                    BecknStrings fulfillmentIds = new BecknStrings(dbItem.getFulfillmentIds());
-                    BecknStrings paymentIds = new BecknStrings(dbItem.getPaymentIds());
-                    BecknStrings locationIds = new BecknStrings(dbItem.getLocationIds());
-
-                    Categories categories = outProvider.getCategories();
-                    if (categories == null) {
-                        categories = new Categories();
-                        outProvider.setCategories(categories);
-                    }
-                    for (String categoryId : categoryIds) {
-                        if (categories.get(categoryId) == null) {
-                            in.succinct.catalog.indexer.db.model.Category category = appCategoryMap.get(subscriberId).get(pid).get(categoryId);
-                            if (category != null) {
-                                categories.add(new Category(category.getObjectJson()));
-                            }
-                        }
-                    }
-                    Locations locations = outProvider.getLocations();
-                    if (locations == null) {
-                        locations = new Locations();
-                        outProvider.setLocations(locations);
-                    }
-                    for (String locationId : locationIds) {
-                        if (locations.get(locationId) == null){
-                            ProviderLocation providerLocation = appLocationMap.get(subscriberId).get(pid).get(locationId);
-                            if (providerLocation != null) {
-                                locations.add(new Location(providerLocation.getObjectJson()));
-                            }
-                        }
-                    }
-                    Fulfillments fulfillments = outProvider.getFulfillments();
-                    if (fulfillments == null) {
-                        fulfillments = new Fulfillments();
-                        outProvider.setFulfillments(fulfillments);
-                    }
+                    JSONArray fulfillmentIds = BecknAware.parse(dbItem.getFulfillmentIds());
+                    JSONArray paymentIds = BecknAware.parse(dbItem.getPaymentIds());
+                    JSONArray locationIds = BecknAware.parse(dbItem.getLocationIds());
+                    JSONArray categoryIds = BecknAware.parse(dbItem.getCategoryIds());
                     
-                    for (String fulfillmentId : fulfillmentIds) {
-                        if (fulfillments.get(fulfillmentId) == null){
-                            Fulfillment fulfillment = appFulfillmentMap.get(subscriberId).get(pid).get(fulfillmentId);
-                            if (fulfillment != null){
-                                in.succinct.beckn.Fulfillment outFulfillment = new in.succinct.beckn.Fulfillment(fulfillment.getObjectJson());
-                                fulfillments.add(outFulfillment);
-                                in.succinct.beckn.Fulfillment catFulfillment = catalog.getFulfillments().get(fulfillmentId);
-                                if (catFulfillment == null){
-                                    catFulfillment = new in.succinct.beckn.Fulfillment();
-                                    catFulfillment.setId(fulfillmentId);
-                                    catFulfillment.setType(outFulfillment.getType());
-                                    catalog.getFulfillments().add(catFulfillment);
-                                }
-                            }
-                        }
-                    }
-                    Payments payments = outProvider.getPayments();
-                    if (payments == null) {
-                        payments = new Payments();
-                        outProvider.setPayments(payments);
-                    }
-                    for (String paymentId : paymentIds) {
-                        if (payments.get(paymentId) == null){
-                            Payment payment = appPaymentMap.get(subscriberId).get(pid).get(paymentId);
-                            if (payment != null){
-                                payments.add(new in.succinct.beckn.Payment(payment.getObjectJson()));
-                            }
+                    if (!locations.isEmpty()) {
+                        locationIds.retainAll(locations.ids());
+                        if (locationIds.isEmpty()) {
+                            continue;
                         }
                     }
                     
-                    Items items = outProvider.getItems();
-                    if (items == null) {
-                        items = new Items();
-                        outProvider.setItems(items);
+                    if (!categories.isEmpty()) {
+                        categoryIds.retainAll(categories.ids());
+                        if (categoryIds.isEmpty()) {
+                            continue;
+                        }
                     }
+                    
+                    Item outItem = toBeckn(Item.class,dbItem);
+                    outItem.setLocationIds(new BecknStrings(locationIds));
+                    outItem.setPaymentIds(new BecknStrings(paymentIds));
+                    outItem.setFulfillmentIds(new BecknStrings(fulfillmentIds));
+                    outItem.setCategoryIds(new BecknStrings(categoryIds));
+                    
+                    
                     if (items.get(dbItem.getObjectId()) == null) {
-                        Item outItem = new Item((JSONObject) JSONAwareWrapper.parse(dbItem.getObjectJson()));
                         outItem.setTime(new Time());
                         outItem.getTime().setLabel(dbItem.isActive() ? "enable" : "disable");
                         outItem.getTime().setTimestamp(dbItem.getUpdatedAt());
@@ -771,7 +898,7 @@ public class CatalogSearchEngine {
                         }
                         String inValue = inTag.getValue();
                         String outValue = outTag.getValue();
-                        if (inValue != null){
+                        if (!ObjectUtil.isVoid(inValue)){
                             if (!ObjectUtil.equals(inValue,outValue) && !Pattern.matches(inValue,StringUtil.valueOf(outValue))){
                                 return false;
                             }
@@ -856,7 +983,7 @@ public class CatalogSearchEngine {
         Cache<String, Cache<Long,Cache<String, T>>> cache = new Cache<>(0, 0) {
             @Override
             protected Cache<Long,Cache<String, T>> getValue(String subscriberId) {
-                return new Cache<Long, Cache<String, T>>() {
+                return new Cache<>() {
                     @Override
                     protected Cache<String, T> getValue(Long providerId) {
                         return createDbCache(clazz, subscriberId,providerId, new HashSet<>());
@@ -865,16 +992,19 @@ public class CatalogSearchEngine {
             }
         };
         if (!ids.isEmpty() && !ids.contains(null)) {
-            Select select = new Select().from(clazz);
-            select.where(new Expression(select.getPool(),"OBJECT_ID",Operator.IN,ids.toArray()));
-            loadCache(select.execute(clazz),cache);
+            loadCache(clazz,ids,cache);
         }
         return cache;
     }
+    private <T extends Model & IndexedProviderModel> void loadCache(Class<T> clazz , Set<String> ids, Cache<String, Cache<Long,Cache<String, T>>> cache){
+        if (!ids.isEmpty() && !ids.contains(null)) {
+            Select select = new Select().from(clazz);
+            select.where(Expression.createExpression(select.getPool(),"OBJECT_ID",Operator.IN,ids.toArray()));
+            loadCache(select.execute(clazz),cache);
+        }
+    }
     private <T extends Model & IndexedProviderModel> void loadCache(List<T> objects, Cache<String, Cache<Long,Cache<String, T>>> cache){
-        objects.forEach(t->{
-            cache.get(t.getSubscriberId()).get(t.getProviderId()).put(t.getObjectId(), t);
-        });
+        objects.forEach(t-> cache.get(t.getSubscriberId()).get(t.getProviderId()).put(t.getObjectId(), t));
     }
     
 
